--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.javatpoint</groupId>
-	<artifactId>spring-boot-hello-world-example</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>SGP-Spring</artifactId>
+	<version>0.0.1</version>
 	<name>spring-boot-hello-world-example</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
